# LightProbe

./: .dockerignore  .gitignore  .mcp.json  AGENTS.md  CONTRACT.md  Dockerfile  Makefile  README.md  deploy.sh  docker-compose.yml  index.html  metadata.json  package.json  pnpm-lock.yaml  requirements.txt  server.ts  tsconfig.base.json
common/: __init__.py  db.py  faults.py  http.py  telemetry.py
demo/: docker-compose.yml
deploy/gcp/: README.md  (+18 more)
docs/: client-setup.md
docs-site/: .gitignore  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tsconfig.json
liveprobe/: Dockerfile  __init__.py  daemon.py  engine.py  mcp_server.py
migrations/: 20260719194020_remote_schema.sql  20260719201400_seed_tables.sql  20260719204000_ride_flow.sql  20260719204500_invariant_support.sql
ops/: Dockerfile.stub_agent  __init__.py  fault_harness.py  janitor.py  proof_agent.py  proof_faults.py  proof_ride.py  proof_world.py  run_gauntlet.py  seed.py  stub_agent.py
python/sdk/: README.md  pyproject.toml
python/sdk/benchmarks/: monitoring_overhead.py
python/sdk/src/liveprobe/: __init__.py  runtime.py  safe_expression.py  serializer.py
python/sdk/tests/: conftest.py  test_integration.py  test_monitoring_smoke.py  test_runtime.py  test_safe_expression.py  test_scaffold.py  test_serializer.py
scripts/: e2e-jvm.mjs  print-demo-config.mjs  python312.sh  readonly-audit.mjs  redaction-audit.sh  validate-fixtures.mjs
services/: Dockerfile.template  __init__.py
spec/: protocol.md
src/: App.tsx  index.css  types.ts
world/: Dockerfile  __init__.py  app.py
(+100 files in other folders)
