[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "liveprobe-python"
version = "0.1.0"
description = "Zero-dependency runtime agent for LiveProbe"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
liveprobe = ["py.typed"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers -q"
pythonpath = ["src"]
testpaths = ["tests"]
